tmux battery color changed

--- a/tmux/config/status.tmux.conf
+++ b/tmux/config/status.tmux.conf
@@ -32,9 +32,20 @@ set-option -g status-right-length 60
 set-option -g status-right "\
 #[fg=colour255,bg=colour243] #h | \
 Online: #{online_status} | \
-#{battery_color_status_fg}#[bg=colour243]#{battery_percentage}#[fg=colour255] | \
+#{battery_color_fg}#[bg=colour243]#{battery_percentage}#[fg=colour255] | \
 %m/%d %H:%M:%S#[default]\
 "
 
 set -g @online_icon "#[fg=colour40]✔ #[fg=colour255]"
 set -g @offline_icon "#[fg=colour160]X#[fg=colour255]"
+
+set -g @batt_color_charge_secondary_tier8 '#00ff66' # [95%-100%]
+set -g @batt_color_charge_secondary_tier7 '#00ff2b' # [80%-95%)
+set -g @batt_color_charge_secondary_tier6 '#00ff2b' # [65%-80%)
+set -g @batt_color_charge_secondary_tier5 '#00ff2b' # [50%-65%)
+set -g @batt_color_charge_secondary_tier4 '#d5ff00' # [35%-50%)
+set -g @batt_color_charge_secondary_tier3 '#d5ff00' # [20%-35%)
+set -g @batt_color_charge_secondary_tier2 '#d5ff00'  # (5%-20%)
+set -g @batt_color_charge_secondary_tier1 '#ff0000'  # [0%-5%]
+
+set -g @batt_color_status_primary_charging 'colour44'
