--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -44,6 +44,8 @@ hook_add = '''
     cnoremap <expr><Tab>   pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
     cnoremap <expr><C-n>   pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
     cnoremap <expr><C-p>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+    cnoremap <Down>        pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+    cnoremap <Up>          pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
     cnoremap <expr><Enter> pum#visible() ? '<Cmd>call pum#map#confirm()<CR>' : '<Enter>'
 
     " Overwrite sources
