--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -22,7 +22,7 @@ hook_source = '''
 '''
 [plugins.ftplugin]
 defx = '''
-  nnoremap <silent><buffer><expr> <Enter>
+  nnoremap <silent><buffer><expr> <CR>
     \ defx#is_directory() ?
     \ defx#do_action('open_or_close_tree') :
     \ defx#do_action('multi', ['drop', 'quit'])
