--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -30,11 +30,11 @@ hook_source = '''
   call ddc#custom#patch_global('autoCompleteEvents', [
     \   'InsertEnter', 'TextChangedI', 'TextChangedP', 'CmdlineEnter', 'CmdlineChanged',
     \ ])
-  inoremap <expr><C-n> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-  inoremap <expr><C-p> pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-  inoremap <Down>      pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-  inoremap <Up>        pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-  inoremap <expr><CR>  pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
+  inoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+  inoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+  inoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+  inoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+  inoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
 
   call ddc#enable()
 '''
@@ -43,12 +43,12 @@ hook_add = '''
 
   function! CommandlinePre() abort
     " Note: It disables default command line completion!
-    cnoremap <expr><Tab> pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
-    cnoremap <expr><C-n> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <expr><C-p> pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <Down>      pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <Up>        pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <expr><CR>  pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
+    cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
+    cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+    cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+    cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+    cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+    cnoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
 
     " Overwrite sources
     let s:prev_buffer_config = ddc#custom#get_buffer()
