fix minor problem

--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -2,6 +2,9 @@
 repo = 'Shougo/dein.vim'
 hook_add = '''
   let g:dein#enable_notification = v:true
+  let g:dein#auto_recache = v:false " intel-macだと遅いのでfalse、m1-macで要検証
+  let g:dein#install_progress_type = 'floating'
+  let g:dein#lazy_rplugins = v:true
 '''
 
 [[plugins]]
