--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -50,7 +50,7 @@ on_source = 'defx.nvim'
 # formatter
 [[plugins]]
 repo = 'prettier/vim-prettier'
-build = 'npm install'
+hook_post_update = 'npm install'
 on_ft = ['markdown']
 hook_source = '''
   autocmd BufWritePre *.md PrettierAsync
