--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -4,6 +4,7 @@ depends = ['denops.vim', 'pum.vim']
 on_event = ['InsertEnter', 'CursorHold']
 hook_source = '''
   call ddc#custom#patch_global('sources', ['around'])
+  call ddc#custom#patch_global('cmdlineSources', ['cmdline', 'cmdline-history', 'around'])
   call ddc#custom#patch_global('sourceOptions', {
     \   '_': {
     \     'ignoreCase': v:true,
@@ -46,44 +47,6 @@ hook_source = '''
 
   call ddc#enable()
 '''
-hook_add = '''
-  nnoremap : <Cmd>call CommandlinePre()<CR>:
-
-  function! CommandlinePre() abort
-    cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
-    cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-    cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-    cnoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
-
-    " Overwrite sources
-    if !exists('b:prev_buffer_config')
-      let b:prev_buffer_config = ddc#custom#get_buffer()
-    endif
-    call ddc#custom#patch_buffer('sources', ['cmdline', 'cmdline-history', 'around'])
-
-    autocmd User DDCCmdlineLeave ++once call CommandlinePost()
-    autocmd InsertEnter <buffer> ++once call CommandlinePost()
-
-    call ddc#enable_cmdline_completion()
-  endfunction
-
-  function! CommandlinePost() abort
-    if exists('b:prev_buffer_config')
-      call ddc#custom#set_buffer(b:prev_buffer_config)
-      unlet b:prev_buffer_config
-    else
-      call ddc#custom#set_buffer({})
-    endif
-    silent! cunmap <Tab>
-    silent! cunmap <C-n>
-    silent! cunmap <C-p>
-    silent! cunmap <Down>
-    silent! cunmap <Up>
-    silent! cunmap <CR>
-  endfunction
-'''
 
 [[plugins]]
 repo = 'Shougo/pum.vim'
@@ -93,6 +56,13 @@ hook_add = '''
   inoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
   inoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
   inoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
+
+  cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
+  cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+  cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+  cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+  cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+  cnoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
 '''
 
 [[plugins]]
