--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -47,6 +47,32 @@ hook_source = '''
 
   call ddc#enable()
 '''
+hook_add = '''
+  nnoremap : <Cmd>call CommandlinePre()<CR>:
+
+  function! CommandlinePre() abort
+    cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
+    cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+    cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+    cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
+    cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
+    cnoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
+
+    autocmd User DDCCmdlineLeave ++once call CommandlinePost()
+    autocmd InsertEnter <buffer> ++once call CommandlinePost()
+
+    call ddc#enable_cmdline_completion()
+  endfunction
+
+  function! CommandlinePost() abort
+    silent! cunmap <Tab>
+    silent! cunmap <C-n>
+    silent! cunmap <C-p>
+    silent! cunmap <Down>
+    silent! cunmap <Up>
+    silent! cunmap <CR>
+  endfunction
+'''
 
 [[plugins]]
 repo = 'Shougo/pum.vim'
@@ -57,12 +83,6 @@ hook_add = '''
   inoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
   inoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
 
-  cnoremap <expr><Tab>  pum#visible() ? '<Cmd>call pum#map#insert_relative(+1)<CR>' : ddc#manual_complete()
-  cnoremap <expr><C-n>  pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-  cnoremap <expr><C-p>  pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-  cnoremap <expr><Down> pum#visible() ? '<Cmd>call pum#map#select_relative(+1)<CR>' : '<Down>'
-  cnoremap <expr><Up>   pum#visible() ? '<Cmd>call pum#map#select_relative(-1)<CR>' : '<Up>'
-  cnoremap <expr><CR>   pum#visible() ? '<Cmd>call pum#map#confirm()<CR>'           : '<CR>'
 '''
 
 [[plugins]]
