--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -46,6 +46,21 @@ on_source = 'defx.nvim'
 repo = 'kristijanhusak/defx-git'
 on_source = 'defx.nvim'
 
+[[plugins]]
+repo = 'nvim-treesitter/nvim-treesitter'
+on_event = 'BufRead'
+hook_post_update = 'TSUpdate'
+hook_source = '''
+lua <<EOF
+require'nvim-treesitter.configs'.setup {
+    ensure_installed = 'all',
+    additional_vim_regex_highlighting = false,
+    highlight = {
+        enable = true,
+    },
+}
+EOF
+'''
 
 # formatter
 [[plugins]]
