--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -61,7 +61,7 @@ require'nvim-treesitter.configs'.setup {
 
     highlight = {
         enable = true,
-        disable = { "tex", "latex" },
+        disable = { "tex", "latex", "help" },
     },
 }
 EOF
