--- a/vim/rc/filetype.toml
+++ b/vim/rc/filetype.toml
@@ -14,6 +14,7 @@ tex = '''
   autocmd BufWritePre *.tex :call FixPunctuation()
 
   function! FixPunctuation() abort
+    let l:pos = getpos(".")
     try
       :%s/。/. /g
     catch
@@ -23,5 +24,6 @@ tex = '''
     catch
     endtry
     :FixWhitespace  " bronson/vim-trailing-whitespace
+    call setpos(".", l:pos)
   endfunction
 '''
