--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -161,7 +161,8 @@ hook_source = '''
       "javascript", "javascriptreact", "javascript.jsx", -- 既定 js
       "typescript", "typescriptreact", "typescript.tsx", -- 既定 ts
       "ts"                                               -- 追加
-    }
+    },
+    root_dir = require("lspconfig.util").root_pattern("deno.json", "deno.jsonc", "tsconfig.json", ".git", "denops")
   }
   nvim_lsp.omnisharp.setup{}
   nvim_lsp.texlab.setup{}
