--- a/vim/rc/filetype.toml
+++ b/vim/rc/filetype.toml
@@ -14,10 +14,10 @@ tex = '''
   autocmd BufWritePre *.tex :call FixPunctuation()
 
   function! FixPunctuation() abort
-    let l:pos = getpos(".")
+    let l:pos = getpos('.')
     silent! execute ':%s/。/. /g'
     silent! execute ':%s/、/, /g'
     silent! execute ':%s/\\\@<!\s\+$//'
-    call setpos(".", l:pos)
+    call setpos('.', l:pos)
   endfunction
 '''
