--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -57,7 +57,7 @@ require'nvim-treesitter.configs'.setup {
     additional_vim_regex_highlighting = false,
 
     -- m1でエラー出るから
-    ignore_install = { "phpdoc" },
+    ignore_install = { 'phpdoc' },
 
     -- helpはハイライト変になる
     -- latexはなんかsnipet挿入後とかでエラーが出る
